--- a/backend/Dockerfile.buildapi
+++ b/backend/Dockerfile.buildapi
@@ -2,12 +2,17 @@
 FROM golang:1.13.1-stretch as generator
 ENV KFP_VERSION 1.0.0
 ENV GRPC_GATEWAY_VERSION v1.9.0
-ENV GO_SWAGGER_VERSION v0.25.0
+ENV GO_SWAGGER_VERSION v0.21.0
 ENV GOLANG_PROTOBUF_VERSION v1.4.2
 ENV PROTOCOLBUFFERS_PROTOBUF_VERSION v3.11.3
 # protoc compiler version
 # Install protoc.
-RUN apt-get update -y && apt-get install -y protobuf-compiler jq sed
+RUN apt-get update -y && apt-get install -y jq sed unzip
+ENV PROTOC_ZIP=protoc-3.13.0-linux-x86_64.zip
+RUN curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.13.0/$PROTOC_ZIP
+RUN unzip -o $PROTOC_ZIP -d /usr/ bin/protoc
+RUN unzip -o $PROTOC_ZIP -d /usr/ 'include/*'
+RUN rm -f $PROTOC_ZIP
 ENV PROTOCCOMPILER /usr/bin/protoc
 ENV PROTOCINCLUDE /usr/include/google/protobuf
 # Need grpc-gateway source code for -I in protoc command.
