changed base to pns

--- a/manifests/kustomize/env/dev/kustomization.yaml
+++ b/manifests/kustomize/env/dev/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 bases:
-  - ../platform-agnostic-pns
+  - ../platform-agnostic
   - ../gcp/inverse-proxy
 
 # Identifier for application manager to apply ownerReference.
