the latest test

--- a/backend/Dockerfile.buildapi
+++ b/backend/Dockerfile.buildapi
@@ -3,8 +3,9 @@ FROM golang:1.13.1-stretch as generator
 ENV KFP_VERSION 1.0.0
 ENV GRPC_GATEWAY_VERSION v1.9.0
 ENV GO_SWAGGER_VERSION v0.21.0
-ENV GOLANG_PROTOBUF_VERSION v1.4.2
-ENV PROTOCOLBUFFERS_PROTOBUF_VERSION v3.11.3
+ENV GOLANG_PROTOBUF_VERSION v1.3.2
+ENV PROTOCOLBUFFERS_PROTOBUF_VERSION v2.11.3
+ENV GRPC_VERSION v1.23.0
 # protoc compiler version
 # Install protoc.
 RUN apt-get update -y && apt-get install -y jq sed unzip
@@ -18,11 +19,15 @@ ENV PROTOCINCLUDE /usr/include/google/protobuf
 # Need grpc-gateway source code for -I in protoc command.
 WORKDIR /go/src/github.com
 RUN mkdir grpc-ecosystem && cd grpc-ecosystem && git clone --depth 1 --branch $GRPC_GATEWAY_VERSION https://github.com/grpc-ecosystem/grpc-gateway.git
+RUN mkdir grpc && git clone --depth 1 --branch $GRPC_VERSION https://github.com/grpc/grpc-go 
 # Install protoc-gen-rpc-gateway && protoc-gen-swagger.
 RUN cd grpc-ecosystem/grpc-gateway && GO111MODULE=on go mod vendor
 RUN GOBIN=/go/bin go install github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway
 RUN GOBIN=/go/bin go install github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger
-# Need go-swagger source code for -I in protoc command.
+#RUN GOBIN=/go/bin go install google.golang.org/grpc/cmd/protoc-gen-go-grpc
+# RUN go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
+# RUN cd /go/src/google.golang.org/grpc && git checkout v1.23.0 && go install ./ 
+
 RUN mkdir go-swagger && cd go-swagger && git clone --depth 1 --branch $GO_SWAGGER_VERSION https://github.com/go-swagger/go-swagger.git
 # Install swagger.
 RUN cd go-swagger/go-swagger && go mod vendor
