--- a/backend/src/apiserver/config/config.json
+++ b/backend/src/apiserver/config/config.json
@@ -16,5 +16,5 @@
   "InitConnectionTimeout": "6m",
   "DefaultPipelineRunnerServiceAccount": "pipeline-runner",
   "CacheEnabled": "true",
-  "CRON_SCHEDULE_TIMEZONE": "cronScheduleTimezone"
+  "CRON_SCHEDULE_TIMEZONE": "UTC"
 }
