--- a/components/gcp/bigquery/query/to_gcs/component.yaml
+++ b/components/gcp/bigquery/query/to_gcs/component.yaml
@@ -79,6 +79,7 @@ implementation:
       --table_id, {inputValue: table_id},
       --dataset_location, {inputValue: dataset_location},
       --output_gcs_path, {inputValue: output_gcs_path},
+      --output_destination_format, {inputValue: output_destination_format},
       --job_config, {inputValue: job_config},
       --output_gcs_path_output_path, {outputPath: output_gcs_path},
     ]
