updated docker image

--- a/backend/Dockerfile.buildapi
+++ b/backend/Dockerfile.buildapi
@@ -6,7 +6,7 @@ ENV GO_SWAGGER_VERSION v0.21.0
 ENV GOLANG_PROTOBUF_VERSION v1.3.2
 ENV PROTOCOLBUFFERS_PROTOBUF_VERSION v2.11.3
 ENV GRPC_VERSION v1.23.0
-# protoc compiler version
+
 # Install protoc.
 RUN apt-get update -y && apt-get install -y jq sed unzip
 ENV PROTOC_ZIP=protoc-3.13.0-linux-x86_64.zip
@@ -16,6 +16,7 @@ RUN unzip -o $PROTOC_ZIP -d /usr/ 'include/*'
 RUN rm -f $PROTOC_ZIP
 ENV PROTOCCOMPILER /usr/bin/protoc
 ENV PROTOCINCLUDE /usr/include/google/protobuf
+
 # Need grpc-gateway source code for -I in protoc command.
 WORKDIR /go/src/github.com
 RUN mkdir grpc-ecosystem && cd grpc-ecosystem && git clone --depth 1 --branch $GRPC_GATEWAY_VERSION https://github.com/grpc-ecosystem/grpc-gateway.git
@@ -24,20 +25,21 @@ RUN mkdir grpc && git clone --depth 1 --branch $GRPC_VERSION https://github.com/
 RUN cd grpc-ecosystem/grpc-gateway && GO111MODULE=on go mod vendor
 RUN GOBIN=/go/bin go install github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway
 RUN GOBIN=/go/bin go install github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger
-#RUN GOBIN=/go/bin go install google.golang.org/grpc/cmd/protoc-gen-go-grpc
-# RUN go get -u google.golang.org/grpc/cmd/protoc-gen-go-grpc
-# RUN cd /go/src/google.golang.org/grpc && git checkout v1.23.0 && go install ./ 
 
+# Need go-swagger source code for -I in protoc command.
 RUN mkdir go-swagger && cd go-swagger && git clone --depth 1 --branch $GO_SWAGGER_VERSION https://github.com/go-swagger/go-swagger.git
 # Install swagger.
 RUN cd go-swagger/go-swagger && go mod vendor
 RUN GOBIN=/go/bin go install github.com/go-swagger/go-swagger/cmd/swagger
+
 # Need protobuf source code for -I in protoc command.
 RUN mkdir golang && cd golang && git clone --depth 1 --branch $GOLANG_PROTOBUF_VERSION https://github.com/golang/protobuf.git
 # Install protoc-gen-go.
 RUN cd golang/protobuf && GO111MODULE=on go mod vendor
 RUN GOBIN=/go/bin go install github.com/golang/protobuf/protoc-gen-go
+
 # Need protobuffers/protobuf source code for -I in proto command.
 RUN mkdir protocolbuffers && cd protocolbuffers && git clone --depth 1 --branch $PROTOCOLBUFFERS_PROTOBUF_VERSION https://github.com/protocolbuffers/protobuf.git
+
 # Need autogen to add license info to generated files.
 RUN mkdir /autogen && git clone https://github.com/mbrukman/autogen.git /autogen
