--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -26,7 +26,7 @@
       "updateTypes": ["patch", "minor"],
       "groupName": "npm non-major updates"
     },
-    {
+    { // disable python package updates initially, because they are not stable
       "languages": ["python"],
       "enabled": false
     },
